Fixed issue where 5th star would wrap to new line.

--- a/src/css/Skillset.css
+++ b/src/css/Skillset.css
@@ -62,6 +62,10 @@
     padding-left: 2em;
 }
 
+#stars-div {
+    text-align: center;
+}
+
 .fa-xs {
-    font-size: 0.67em;
+    font-size: 0.6em;
 }
